--- a/multi-sensor-network-main/vercel.json
+++ b/multi-sensor-network-main/vercel.json
@@ -10,6 +10,14 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico))",
+      "dest": "/gateway-server/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/gateway-server/index.html"
     }
   ]
 }
