--- a/multi-sensor-network-main/vercel.json
+++ b/multi-sensor-network-main/vercel.json
@@ -13,11 +13,11 @@
     },
     {
       "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico))",
-      "dest": "/multi-sensor-network-main/gateway-server/$1"
+      "dest": "/gateway-server/$1"
     },
     {
       "src": "/",
-      "dest": "/multi-sensor-network-main/gateway-server/index.html"
+      "dest": "/gateway-server/index.html"
     }
   ]
 }
